[tool.poetry]
name = "Parser"
version = "0.1.0"
description = "Web page scrapers"
authors = ["Alexander Dovguchits <alexander.dovguchits@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.29.0"
lxml = "^5.3.1"
requests = "^2.32.3"
asgiref = "^3.8.1"
bs4 = "^0.0.2"
sqlparse = "^0.5.3"
tzdata = "^2025.1"
psycopg2 = "^2.9.10"
undetected-chromedriver = "^3.5.5"
selenium-stealth = "^1.0.6"
pyppeteer-stealth = "^2.7.4"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
aiofiles = "^24.1.0"
aiohttp = "^3.11.13"
fake-useragent = "^2.1.0"
pyppeteer = "^2.0.0"
dotenv = "^0.9.9"
black = "^25.1.0"
flake8 = "^7.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
